--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-32x32.png">
   <link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#4c60e3">
   <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
+  <script src="./vendor/webcomponents-loader.js"></script>
+  <link rel="stylesheet" href="./main.css">
 
 	<style>
     * {
@@ -43,7 +45,7 @@
 	</style>
 
   <script>
-    /* (function() {
+     (function() {
       if (!('serviceWorker' in navigator)) {
         console.log('Service worker is not supported');
         return;
@@ -70,7 +72,7 @@
         }).catch(function(e) {
           console.error('Error during service worker registration:', e);
         });
-    })(); */
+    })(); 
 
     document.addEventListener('WebComponentsReady', function componentsReady() {
       document.removeEventListener('WebComponentsReady', componentsReady, false);
